dataset1235/2025-2/2947369575/users/3291858379/executions/1003782500_2667036473.log
== SUBMISSION (2025-08-27 18:46:55)
-- CODE: 
celsius= float(input("digite a temperatura em graus celsius: "))
kelvin = celsius + 273.15
print(" A temperstura em Kelvin e :", round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:46:53)
-- CODE: 
celsius= float(input("digite a temperatura em graus celsius: "))
kelvin = celsius + 273.15
print(" A temperstura em Kelvin e :", round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
digite a temperatura em graus celsius:  A temperstura em Kelvin e : 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:32:34)
-- CODE: 
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:46:31)
-- CODE: 
c = float(input("digite a temperatura em graus celsius: "))
kelvin = celsius + 273.15
print(" A temperstura em Kelvin e :", round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:33:36)
-- CODE: 
celsius= float(input("digite a temperatura em graus celsius: "))
kelvin = celsius + 273.15
print(" A temperatura em Kelvin e :", round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
digite a temperatura em graus celsius:  A temperatura em Kelvin e : 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
digite a temperatura em graus celsius:  A temperatura em Kelvin e : 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
digite a temperatura em graus celsius:  A temperatura em Kelvin e : 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
digite a temperatura em graus celsius:  A temperatura em Kelvin e : 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
digite a temperatura em graus celsius:  A temperatura em Kelvin e : 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
digite a temperatura em graus celsius:  A temperatura em Kelvin e : 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:47:50)
-- CODE: 
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:46:29)
-- CODE: 
c = float(input("digite a temperatura em graus celsius: "))
kelvin = celsius + 273.15
print(" A temperstura em Kelvin e :", round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
